# maze-bot-ros2

./: .gitignore  README.md
docs/: parameters.md  setup-guide.md  troubleshooting.md  usage-guide.md
scripts/: autonomous_navigation_demo.py  build_and_test.sh  setup_wsl_environment.sh  test_autonomous_navigation.py  test_navigation.py  test_navigation_algorithms.py  test_robot_stability.py
src/maze_bot_bringup/: CMakeLists.txt  package.xml
src/maze_bot_bringup/config/: rviz_config.rviz
src/maze_bot_bringup/launch/: autonomous_navigation.launch.py  maze_bot_simulation.launch.py  rviz.launch.py  slam_navigation.launch.py
src/maze_bot_description/: CMakeLists.txt  package.xml
src/maze_bot_description/launch/: display.launch.py
src/maze_bot_description/urdf/: maze_bot.urdf.xacro  maze_bot_complete.urdf.xacro  maze_bot_gazebo.xacro
src/maze_bot_gazebo/: CMakeLists.txt  package.xml
src/maze_bot_gazebo/launch/: gazebo.launch.py
src/maze_bot_gazebo/worlds/: maze_world.world
src/maze_bot_navigation/: CMakeLists.txt  package.xml
src/maze_bot_navigation/config/: navigation_params.yaml
src/maze_bot_navigation/include/maze_bot_navigation/: autonomous_path_planner.hpp  enhanced_navigation_controller.hpp  vision_target_detector.hpp
src/maze_bot_navigation/launch/: navigation.launch.py
src/maze_bot_navigation/src/: autonomous_path_planner.cpp  enhanced_navigation_controller.cpp  maze_navigator.cpp  vision_target_detector.cpp
